# r1-hermes

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.symphony/: WORKFLOW_R1_HERMES_GITHUB_PROJECTS.md
docs/: agent-setup.md  capture-replay.md  development-checks.md  public-wss-native-tls.md  release.md  running.md  security.md  symphony.md  systemd-user-service.md
packaging/systemd/: r1-hermes.env.example  r1-hermes.service
src/r1_hermes/: __init__.py  adapter.py  audit.py  capture_sanitizer.py  chat_errors.py  cli.py  frame_shape.py  hermes_runner.py  media.py  native_gateway.py  outbound.py  payloads.py  qr.py  r1_client.py  token_policy.py  toolsets.py
src/r1_hermes/systemd/: r1-hermes.env.example
tests/: replay_helpers.py  test_adapter_security.py  test_capture_sanitizer.py  test_ci_security_checks.py  test_cli_probe.py  test_cli_server_e2e.py  test_deployment_docs.py  test_doctor.py  test_fixture_replay.py  test_frame_shape_logging.py  test_hermes_runner.py  test_native_gateway.py  test_native_tls.py  test_payload_parser.py  test_qr.py  test_r1_client.py  test_release_packaging.py  test_systemd_packaging.py  test_token_policy.py  token_fixtures.py
tests/fixtures/r1_payloads/: README.md  chat_history_payload_aliases.json  chat_send_media_only_image_content.json  chat_send_mixed_text_audio_content.json  chat_send_payload_aliases.json  chat_send_public_image_content.json  community_shim_chat_message_object.json  connect_official_helper.json  connect_payload_aliases.json  (+5 more)
