[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "r1-hermes"
version = "0.1.0"
description = "Secure Rabbit R1 gateway adapter for Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Kan Ninomiya"}]
dependencies = ["aiohttp>=3.9"]

[project.scripts]
r1-hermes = "r1_hermes.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "pip-audit>=2.7", "pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]
qr = ["qrcode[pil]>=7.4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]
